adding a product service and setting up static product data in a seperate file

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 </head>
 
 <body>
-    <pm-app>Loading App......</pm-app>
+    <div class="container">
+        <pm-app>Loading App......</pm-app>
+    </div>
 </body>
 
 </html>
