--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head lang="en">
+    <base href="/">
     <title>Acme Product Management</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,9 +25,7 @@
 </head>
 
 <body>
-    <div class="container">
-        <pm-app>Loading App......</pm-app>
-    </div>
+    <pm-app>Loading App......</pm-app>
 </body>
 
 </html>
